--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/carRental
+spring.datasource.url = jdbc:mysql://localhost:3306/carrental
 spring.datasource.username = root
-spring.datasource.password = 12345678
+spring.datasource.password = 1234
 
 # hibernate properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
